--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -5,7 +5,7 @@ $green-blue: #86e8e0;
 $green-yellow: #acffb3;
 $dark-green: #7cfa86;
 $yellow: #d9ec85;
-$dark-orange: #f3b165;
+$dark-orange: #c78f6a;
 $red: #ee8484;
 $gray: #fcf7f4;
 $white: #ffffff;
