--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,6 +1,10 @@
 .contact {
 	background-color: $white;
-	margin-top: 30px;
+	padding-top: 40px;
+
+	&-wrapper {
+		padding: 12px;
+	}
 
 	&-title {
 		font-size: 2.5em;
@@ -39,6 +43,12 @@
 			text-align: center;
 			font-style: italic;
 			font-size: 0.7em;
+		}
+	}
+
+	@media only screen and (max-width: 430px) {
+		&-content {
+			font-size: 0.8em;
 		}
 	}
 }
