--- a/src/styles/ForWhom.scss
+++ b/src/styles/ForWhom.scss
@@ -2,6 +2,10 @@
 	position: relative;
 	height: 600px;
 
+	&-wrapper {
+		padding: 12px;
+	}
+
 	@media only screen and (max-width: 768px) {
 		height: 1200px;
 	}
