--- a/src/styles/Info.scss
+++ b/src/styles/Info.scss
@@ -5,6 +5,10 @@
 	background-position: center center;
 	background-color: $gray;
 
+	&-wrapper {
+		padding: 12px;
+	}
+
 	&-content {
 		display: flex;
 		justify-content: center;
@@ -20,6 +24,12 @@
 			font-size: 3em;
 			font-weight: 700;
 			text-align: center;
+		}
+
+		@media only screen and (max-width: 360px) {
+			&--title {
+				font-size: 2.5em;
+			}
 		}
 
 		&--desc {
